--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,28 @@ a {
   margin-right: auto;
   margin-left: auto;
 }
-
+.section-title {
+  margin-bottom: 48px;
+}
+.section-title h2 {
+  color: #0d1321;
+  text-align: center;
+  font-family: "Azeret Mono";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+.section-title p {
+  color: #0d1321;
+  text-align: center;
+  font-family: "Azeret Mono";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+  opacity: 0.7;
+}
 /* Global css end  */
 
 /* header css start  */
