--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,3 +219,20 @@ nav {
 }
 
 /* Why Web Development css end  */
+/* My Inspiration css start  */
+.insp p {
+  width: 852px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.video {
+  border-radius: 16px;
+  border: 1px solid rgba(13, 19, 33, 0.2);
+  padding: 32px;
+}
+.video-ctr {
+  width: 100%;
+  aspect-ratio: 16/9;
+  border-radius: 16px;
+}
+/* My Inspiration css end  */
