My Next Target done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,3 +294,49 @@ nav {
   background: rgba(255, 223, 0, 0.05);
 }
 /* My Current Target css end  */
+/* My Next Target section css start  */
+.current-target {
+  margin-top: 110px;
+}
+.flex-col {
+  display: flex;
+  gap: 24px;
+  flex-direction: column;
+}
+.current-target .flex {
+  display: flex;
+  gap: 24px;
+  float: left;
+  text-align: left;
+  border-radius: 16px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  background: #fff;
+  padding: 40px;
+}
+.current-target .flex h4 {
+  color: #0d1321;
+  font-family: "Azeret Mono";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 36px; /* 150% */
+}
+.current-target .flex p {
+  color: #0d1321;
+  font-family: "Azeret Mono";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+  opacity: 0.7;
+}
+.current-target .flex a {
+  color: #0d1321;
+  font-family: "Azeret Mono";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration-line: underline;
+}
+/* My Next Target section css end  */
